--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,18 @@
+:root {
+  --size-xsmall: calc(100dvmin / 32);
+  --size-small: calc(100dvmin / 24);
+  --size-medium: calc(100dvmin / 16);
+  --size-large: calc(100dvmin / 8);
+}
+
+*, *::after, *::before {
+  box-sizing: border-box;
+}
+
+svg {
+  margin: -1px
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
